Rest services module, dependencies major update